# summit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  auto_update.sh  check_updates.py  generate_personal_records.sh  kom_to_org.py  komoot_cli.py  pyproject.toml  requirements.txt  ruff.toml  segment_kom.py  setup_cache.sh  update_cache.sh
.github/workflows/: pypi.yml  pytest.yml
src/summit/: __init__.py  activities.py  config.py  credentials.py  gemeentes.py  kom.py  komoot.py  org.py  prs.py  updates.py
src/summit/cli/: __init__.py  auto_update.py  generate.py  main.py  setup.py  update.py
tests/: conftest.py  test_activities.py  test_cli.py  test_config.py  test_credentials.py  test_gemeentes.py  test_kom.py  test_komoot.py  test_org.py  test_prs.py  test_updates.py
