[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "summit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "garminconnect==0.2.38",
    "komPYoot>=1.0.5",
    "gpxpy>=1.6.1",
    "lxml>=4.9.0",
    "requests>=2.31.0",
]

[project.scripts]
summit = "summit.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"] 
