[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "summit"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "garminconnect==0.2.38",
    "komPYoot>=1.0.5",
    "gpxpy>=1.6.1",
    "lxml>=4.9.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
summit = "summit.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools_scm]
tag_regex = '^v(?P<version>\d+\.\d+\.\d+(?:[ab]\d+)?)$'

[tool.pyright]
# Environment options. We aim to keep the defaults hence little settings are applied.
include = ["src", "tests"]

# Type Evaluation Settings.
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

# Type Check Rule Overrides.
reportMissingTypeStubs = false
reportUninitializedInstanceVariable = "information"
reportUnusedCallResult = "information"
reportImplicitStringConcatenation = false

## It is obligatory to provide types for functions/methods. Missing them is
# considered an error. Reporting a missing return type is not supported by pyright so it is handled by flake8-annotations.
reportMissingParameterType = true

## These are set to "warning" as optional types are common in the dataclient, which 
## a very common dependency.
reportOptionalCall = "warning"
reportOptionalContextManager = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportOptionalSubscript = "warning"

## The following checks are already covered by Ruff.
reportDuplicateImport = false
reportUnsupportedDunderAll = false
reportUnusedImport = false
reportUnusedVariable = false
