[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "summit"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2,<0.3",
    "komPYoot~=1.0",
    "gpxpy~=1.6",
    "lxml~=6.0",
    "requests~=2.31",
    "shapely~=2.1",
]

[dependency-groups]
dev = ["pytest~=8.0", "pytest-cov~=5.0", "pre-commit"]

[project.scripts]
summit = "summit.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
# Environment options. We aim to keep the defaults hence little settings are applied.
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

# Type Evaluation Settings.
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

# Type Check Rule Overrides.
reportMissingTypeStubs = false
reportUninitializedInstanceVariable = "information"
reportUnusedCallResult = false
reportImplicitStringConcatenation = false

## It is obligatory to provide types for functions/methods. Missing them is
# considered an error. Reporting a missing return type is not supported by pyright so it is handled by flake8-annotations.
reportMissingParameterType = true

## These are set to "warning" as optional types are common in the dataclient, which 
## a very common dependency.
reportOptionalCall = "warning"
reportOptionalContextManager = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportOptionalSubscript = "warning"

## The following checks are already covered by Ruff.
reportDuplicateImport = false
reportUnsupportedDunderAll = false
reportUnusedImport = false
reportUnusedVariable = false
